--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Study Flex React SPA",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"No tests\""
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
