--- a/package.json
+++ b/package.json
@@ -4,24 +4,26 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "test": "echo \"No tests\""
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/modifiers": "^6.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
+    "idb-keyval": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0",
-    "shadcn-ui": "^0.1.0"
+    "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.0",
-    "typescript": "^5.0.0",
-    "vite": "^4.4.0",
-    "tailwindcss": "^3.3.2",
+    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
-    "autoprefixer": "^10.4.14"
+    "tailwindcss": "^3.3.2",
+    "vite": "^4.4.0"
   }
 }
