--- a/package.json
+++ b/package.json
@@ -1,29 +1,36 @@
-{
-  "name": "study-flex",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "echo \"No tests\""
-  },
-  "dependencies": {
-    "@dnd-kit/core": "^6.0.8",
-    "@dnd-kit/modifiers": "^6.0.0",
-    "@dnd-kit/sortable": "^8.0.0",
-    "date-fns": "^2.30.0",
-    "date-fns-tz": "^2.0.0",
-    "idb-keyval": "^6.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2",
-    "vite": "^4.4.0"
-  }
-}
+diff --git a/package.json b/package.json
+index b5ea2fea5a95e62603eee2d3481e13e371a1324e..bd686d9cb281184cbd206fbcea2d0f27de1cd167 100644
+--- a/package.json
++++ b/package.json
+@@ -1,29 +1,30 @@
+ {
+   "name": "study-flex",
+   "version": "1.0.0",
+   "private": true,
+   "scripts": {
+     "dev": "vite",
+     "build": "vite build",
+     "preview": "vite preview",
+     "test": "echo \"No tests\""
+   },
+   "dependencies": {
+     "@dnd-kit/core": "^6.0.8",
+     "@dnd-kit/modifiers": "^6.0.0",
+     "@dnd-kit/sortable": "^8.0.0",
+     "date-fns": "^2.30.0",
+     "date-fns-tz": "^2.0.0",
+     "idb-keyval": "^6.2.1",
+     "react": "^18.2.0",
+     "react-dom": "^18.2.0",
+-    "react-router-dom": "^6.17.0"
++    "react-router-dom": "^6.17.0",
++    "@heroicons/react": "^2.0.18"
+   },
+   "devDependencies": {
+     "@vitejs/plugin-react": "^4.0.0",
+     "autoprefixer": "^10.4.14",
+     "postcss": "^8.4.23",
+     "tailwindcss": "^3.3.2",
+     "vite": "^4.4.0"
+   }
+ }
