--- a/package.json
+++ b/package.json
@@ -9,16 +9,12 @@
     "test": "echo \"No tests\""
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.0.8",
-    "@dnd-kit/modifiers": "^6.0.0",
-    "@dnd-kit/sortable": "^8.0.0",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "idb-keyval": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0",
-    "@heroicons/react": "^2.0.18"
+    "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
