--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "idb-keyval": "^6.2.1",
+    "@heroicons/react": "^2.0.18",
+    "recharts": "^2.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0"
