--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "test": "echo \"No tests\""
   },
   "dependencies": {
+    "@dataconnect/generated": "file:src/dataconnect-generated",
+    "@heroicons/react": "^2.0.18",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "firebase": "^12.2.1",
     "idb-keyval": "^6.2.1",
-    "@heroicons/react": "^2.0.18",
-    "recharts": "^2.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "recharts": "^2.7.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
