--- a/functions/package.json
+++ b/functions/package.json
@@ -9,13 +9,13 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "20"
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1",
-    "@google/generative-ai": "^0.1.3"
+    "firebase-admin": "^12.1.0",
+    "firebase-functions": "^5.0.0",
+    "openai": "^4.0.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
