--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
-    "recharts": "^2.7.2"
+    "recharts": "^2.7.2",
+    "source-map-explorer": "^2.5.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
